--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
       <div class="jumbotron">
-         <center><img src="https://cdn.pixabay.com/photo/2016/11/18/17/15/balloons-1835902__340.jpg" alt="balloon" class="img-responsive"></center>
+         <center><img src="./images/kids.jpg" alt="kids" class="img-responsive"></center>
 
         <div class="kids-header">
         <h1>Spuyten Duyvil Kids</h1>
@@ -143,7 +143,7 @@
     <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2015/04/22/21/04/indoor-swimming-pool-735309_960_720.jpg" alt="swim" class="img-circle" class="img-responsive">
+          <img src="./images/indoorpool.jpg" alt="swim" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Indoor Swim</h3>
             <p>Indoor swim lessons are popular in preparation for summer pool and beach outings.</p>
@@ -153,7 +153,7 @@
   
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2014/10/14/20/24/the-ball-488700_960_720.jpg" alt="soccer" class="img-circle" class="img-responsive">
+          <img src="./images/soccer.jpg" alt="soccer" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Soccer</h3>
             <p>Youth soccer is very popular. Organized teams play in Spring and Fall.</p>
@@ -164,7 +164,7 @@
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2016/05/30/16/24/baseball-1425124__340.jpg" alt="baseball" class="img-circle" class="img-responsive">
+          <img src="./images/baseball.jpg" alt="baseball" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Baseball</h3>
             <p>Baseball is available in the Spring and Fall for boys and girls.</p>
@@ -176,7 +176,7 @@
     
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2016/07/29/14/44/smoking-1553394__340.jpg" alt="softball" class="img-circle" class="img-responsive">
+          <img src="./images/softball.jpg" alt="softball" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Softball</h3>
             <p>Youth softball is popular in Spring and Fall but only girls are allowed.</p>
@@ -202,7 +202,7 @@
       <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2016/08/14/21/47/bike-1594092__340.jpg" alt="biking" class="img-circle" class="img-responsive">
+          <img src="./images/cycling.jpg" alt="biking" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Cycling</h3>
             <p>From Spuyten Duyvil you can access the Hudson River trails or cross the GWB to NJ.</p>
@@ -213,7 +213,7 @@
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2015/09/22/19/00/ship-952292__340.jpg" alt="sailing" class="img-circle" class="img-responsive">
+          <img src="./images/sailing.jpg" alt="sailing" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Sailing</h3>
             <p>Riverfest takes place in June.  You can sail on the Hudson River.</p>
@@ -223,7 +223,7 @@
       
        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2016/09/15/22/53/frog-1672887__340.jpg" alt="movie" class="img-circle" class="img-responsive">
+          <img src="./images/moviefrog.jpg" alt="movie" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Outdoor Movies</h3>
             <p>Look for local announcements for the schedule of movies.</p>
@@ -233,7 +233,7 @@
 
        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2016/11/22/21/33/aviator-sunglasses-1850648__340.jpg" alt="outdoor swim" class="img-circle" class="img-responsive">
+          <img src="./images/pool.jpg" alt="outdoor swim" class="img-circle" class="img-responsive">
           <div class="caption">
             <h3>Outdoor Swim</h3>
             <p>There are public pools for use as well as you can purchase private pool memberships in the area.</p>
