--- a/links.html
+++ b/links.html
@@ -219,7 +219,7 @@
         <a href="http://www.riverdalesoccerclub.org/">Riverdale Soccer Club</a> <br> 
 
 
-        <p>The Riverdale Soccer Club organizes boy and girl teams in the spring ad fall.  Check out their site for schedules and registration dates.</p>
+        <p>The Riverdale Soccer Club organizes boy and girl teams in the spring and fall.  Check out their site for schedules and registration dates.</p>
 
       </div>
       <div class="modal-footer">
