--- a/map.html
+++ b/map.html
@@ -56,7 +56,7 @@
         <img src="./images/spuyten duyvil map.png" alt="map" class="center-block"/>
           <div class="caption">
             <h3>Spuyten Duyvil</h3>
-            <p>Spuyten Duyvil is a neighborhood of the Bronx, New York City. It is bounded on the north by Riverdale, on the east by Kingsbridge, on the south by the Harlem River, and on the west by the Hudson River, although some consider it to be the southernmost part of Riverdale.</p>
+            <p>Spuyten Duyvil is a neighborhood in the Bronx, New York City. It is bounded on the north by Riverdale, on the east by Kingsbridge, on the south by the Harlem River, and on the west by the Hudson River, although some consider it to be the southernmost part of Riverdale.</p>
             <p>Spuyten Duyvil is the location of the Spuyten Duyvil train station, which is served by the Hudson Line of the Metro-North Railroad, providing service into Grand Central Terminal and north into Westchester County. Spuyten Duyvil Bridge, a railroad swing bridge that carries Amtrak's Empire Corridor line between New York City and Albany, spans Spuyten Duyvil Creek. The north end of the Henry Hudson Bridge connects the neighborhood to the island of Manhattan via the Henry Hudson Parkway.</p>        
           </div>
         </div>
